--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+
+html, 
+body,
+#root,
+.app,
+.content{
+  width: 100%;
+  height: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.app{
+  display: flex;
+  position: relative;
+}
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+/*Track*/
+::-webkit-scrollbar-track{
+  background: #e0e0e0;
+}
+
+/*Handle*/
+::-webkit-slider-thumb{
+  background: #888;
+}
+
+/*Handle on Hover*/
+::-webkit-scrollbar-track{
+  background: #555;
 }
